# glfw_glad_from_sources_cmake

./: CMakeLists.txt  README.md  tamachan.cpp
